Strip notifications, no posts-userposts and notification archive(and bug), right align dialog buttons
Summary:
Striped notifications of markdown, no posts indicator for userposts and notification archive, also fixed a bug with notification archive not destroying itself, right aligned dialog buttons
Fixes T161, T185, and T174

Test Plan: Test notification, notification archive, userposts, and dialogs

Reviewers: Info-Screen

Reviewed By: Info-Screen

Subscribers: WyldBot, Info-Screen

Maniphest Tasks: T185, T174, T161

Differential Revision: https://phabricator.wildfyre.net/D145

--- a/src/styles.css
+++ b/src/styles.css
@@ -56,6 +56,10 @@ div.creationEditor {
   zoom: 0.65;
 }
 
+div.mat-dialog-actions {
+  float: right;
+}
+
 div.mat-slide-toggle-bar {
   z-index: 2;
 }
